<resources>
    <string name="app_name">Popular Movies</string>

    <string name="switch_label">Sort By</string>
    <string name="rb_popularity_text">Popularity</string>
    <string name="rb_toprated_text">Top Rated</string>
    <string name="rb_favorites_text">Favorites</string>

    <string name="yearReleased_label">Release Date:\u0020</string>

    <string name="popularity_label">Popularity:\u0020</string>
    <string name="voteAve_label">Vote Average:\u0020</string>
    <string name="network_error">Cannot load data.</string>

    <string name="poster_cd">Movie Poster</string>
    <string name="video_cd">Movie Video</string>
    <string name="review_cd">Movie Review</string>
    <string name="no_videos">No Preview Videos</string>
    <string name="no_reviews">No Reviews</string>

</resources>
