<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_detailmain"

    tools:context="com.example.android.udacity_nanoand_moviestage2.DetailActivity"

    >


    <ScrollView
        android:id="@+id/movie_detail_block_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                />
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/poster_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/poster_cd"
        android:padding="8dp"
        android:src="@mipmap/ic_horizplaceholder_1000x500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/favorite_tb"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/favorite_btn_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/poster_iv"
        app:layout_constraintStart_toStartOf="@+id/poster_iv" />
</android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/summary_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="start"
                android:textAlignment="textStart"

                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/movie_detail_block_fl"
                tools:text="summary text" />

            <TextView
                android:id="@+id/year_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorTextBackground"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="2018" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/popularity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/popularity_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="Popularity : " />

                <TextView
                    android:id="@+id/popularity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="10.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/voteave_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/voteAve_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="Vote Ave : " />

                <TextView
                    android:id="@+id/voteave_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="12.2" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0.0"
                    android:stepSize="0.5" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_layout_border"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/empty_videos_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/ic_layout_border"
                android:padding="10dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:text="@string/no_videos" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_layout_border"
                android:orientation="vertical"
                android:padding="10dp"

                android:scrollbars="none" />
            <TextView
                android:id="@+id/empty_reviews_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/ic_layout_border"
                android:padding="10dp"
                android:visibility="gone"
                android:text="@string/no_reviews" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>